name:                  streamer
version:               0.0.0
build-type:            Simple
cabal-version:         >= 1.22

library
  default-language:    Haskell2010
  exposed-modules:     Streamer
  ghc-options:         -Wall
  build-depends:       base == 4.8.*
                     , basic-prelude
                     , turtle

executable streamer-list-streams
  default-language:    Haskell2010
  main-is:             list-streams.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , streamer
                     , turtle

executable streamer-list-shards
  default-language:    Haskell2010
  main-is:             list-shards.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , streamer
                     , turtle

executable streamer-get-iterator
  default-language:    Haskell2010
  main-is:             get-iterator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , streamer
                     , turtle

executable streamer-list-records
  default-language:    Haskell2010
  main-is:             list-records.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , streamer
                     , turtle
